# FarFieldSpherical

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/: analysis.md  coordinate_systems.md  pattern_operations.md  polarization.md
examples/: basic_usage.py
src/farfield_spherical/: __init__.py  analysis.py  farfield.py  farfield_operations.py  package_functions.py  pattern_operations.py  polarization.py  utilities.py
src/farfield_spherical/io/: __init__.py  npz_format.py  readers.py  swe_utils.py  writers.py
tests/: conftest.py  test_io_roundtrip.py  test_operations.py  test_read_cut.py  test_read_sph.py
