[metadata]
name = farfield-spherical
version = 1.0.0
author = Justin Long
author_email = justinwlong1@gmail.com
description = Core library for spherical far-field antenna pattern analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/farfield-spherical
project_urls =
    Bug Tracker = https://github.com/yourusername/farfield-spherical/issues
    Documentation = https://farfield-spherical.readthedocs.io
    Source Code = https://github.com/yourusername/farfield-spherical
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    xarray>=0.19.0

[options.packages.find]
where = src

[options.extras_require]
swe = swe>=0.1.0
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0

# Flake8 configuration
[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv

# Coverage configuration
[coverage:run]
source = farfield_spherical
omit =
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

# pytest configuration
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --cov=farfield_spherical
    --cov-report=html
    --cov-report=term-missing

# mypy configuration  
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-xarray.*]
ignore_missing_imports = True